# tauri_git

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_ja.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.svelte  app.css  main.ts  svelte.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  git.rs  lib.rs  main.rs  models.rs  update.rs
src-tauri/src/git/: branches.rs  diff.rs  git_worktrees.rs  history.rs  mod.rs  refs.rs  remotes.rs  repository.rs  status.rs  worktree.rs
src/lib/components/: BranchTreeNode.svelte  CommitPane.svelte  DiffCompareDialog.svelte  HistoryPane.svelte  SidebarPane.svelte  TopBar.svelte
src/lib/diff/: sideBySideDiff.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  ja.json
