[package]
name = "tauri_git"
version = "0.1.1"
description = "Minimal Git GUI built with Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "tauri_git_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
git2 = "0.20.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.6.0"
