[package]
name = "tauri_git"
version = "0.2.4"
description = "Minimal Git GUI built with Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "tauri_git_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
git2 = "0.20.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-window-state = "2.2.1"
